God2 (#3)